--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,17 @@
         android:theme="@style/Theme.DhairtaTask"
         tools:targetApi="31">
         <activity
+            android:name=".Activitys.Addpro"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".Activitys.ProductDetailsActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Activitys.Login_activity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +34,8 @@
         </activity>
         <activity
             android:name=".Activitys.MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
